// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsTagEditForm > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Tag"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                filled="true"
                grow="false"
                hint="Tag"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue=""
                placeholder="Tag"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Tag')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                filled="true"
                grow="false"
                hint="Alias"
                maxlength="15"
                modelmodifiers="[object Object]"
                modelvalue=""
                placeholder="Alias"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Alias')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                inverted="false"
                isgroupedselect="false"
                issingleselect="false"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="text"
                itemvalue="value"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="false"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsTagEditForm > renders correctly in edit 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="tag name"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                filled="true"
                grow="false"
                hint="Tag"
                maxlength="200"
                modelmodifiers="[object Object]"
                modelvalue="tag name"
                placeholder="Tag"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Tag')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                filled="true"
                grow="false"
                hint="Alias"
                maxlength="15"
                modelmodifiers="[object Object]"
                modelvalue="tag alias"
                placeholder="Alias"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Alias')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Type"
                inverted="false"
                isgroupedselect="false"
                issingleselect="false"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="text"
                itemvalue="value"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Type"
                prependtext=""
                removenonexistentselections="false"
                required="false"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
